# report_automation

./: .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: ab0e1a7bccf4_initial_migrations.py
app/core/: config.py
app/crew/agents/: data_collector.py
app/crew/tasks/: extraction_task.py
app/db/: database.py  seed.py
app/db/repositories/: base.py  order_repository.py  product_repository.py  sale_repository.py
app/models/: client_model.py  log_model.py  order_model.py  product_model.py  report_model.py  sale_model.py  user_model.py
