[tool.poetry]
name = "report-automation"
version = "0.1.0"
description = ""
authors = ["Percy Tejada Donayre <percytejada.code@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
crewai = "^0.100.1"
openai = "^1.61.0"
pandas = "^2.2.3"
sqlalchemy = "^2.0.37"
pydantic = "^2.10.6"
python-dotenv = "^1.0.1"
alembic = "^1.14.1"
psycopg2-binary = "^2.9.10"
python-multipart = "^0.0.20"
asyncpg = "^0.30.0"
reportlab = "^4.2.5"
pydantic-settings = "^2.7.1"
greenlet = "^3.1.1"
faker = "^35.2.0"
langchain-openai = "^0.3.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^25.1.0"
isort = "^6.0.0"
mypy = "^1.14.1"
pytest-asyncio = "^0.25.3"
pytest-cov = "^6.0.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
